# lean

./: ROADMAP  TODO  build_cmd.sh  mathlib-coercions.dot  mathlib.json  mathlib.lean  mathlib.v  mathlib4.lean  monexp.lean  monexp2.lean  process.py  stdlib.json  stdlib.lean  stdlib4.lean  test.lean  test.v  test4.lean
arithgen/: arithgen.cabal
arithgen/app/: Main.hs
arithgen/src/: Expr.hs  Gen.hs  Render.hs  RenderLean.hs  RenderZ3.hs
cclambda/: test1.lean  test2.lean  test3.lean  test4.lean  test5.lean  test6.lean  test7.lean  test_hfunext.lean
constructions/: recursor_lemmas.lean  unpack_pack.lean  unpack_pack_vector.lean
experiments/: perm-eq.py
gdb/: gdb.lean
issues/: ic_result_expected.lean
leanpkg/leanpkg/: main.lean
perf/: distrib1.lean  distrib2.lean  simp.py
practice/: imp_forall.lean  mutual_cases.lean  mutual_rec.lean  nested_capstone.lean  nested_pack_unpack.lean  nested_pack_unpack_vector.lean  nested_rec.lean  nested_rec2.lean  nested_rec3.lean  nested_rec_with_indices.lean  nested_scrap.lean  nested_unpack_pack1.lean  nested_unpack_pack2.lean  nested_unpack_pack3.lean  nested_unpack_pack_ir_nested_occ.lean  nested_unpack_pack_ir_nested_occ2.lean  nested_unpack_pack_with_indices.lean  nested_unpack_pack_with_pi.lean  simp1.lean  simp2.lean  simp_assoc.lean  simp_comm.lean
script/: mk_all.sh  rm_all.sh
smt2/: abstract_locals_callgrind  arith.smt2  attrs.smt2  bindings.smt2  core.smt2  gdb.smt2  parametric_sorts.smt2
spartan/: basics.lean
src/: CMakeLists.txt
src/emacs/: lean-input.el  lean-settings.el  lean-syntax.el
src/kernel/: expr_sets.h  for_each_fn.cpp  instantiate.cpp  level.cpp  replace_fn.cpp  type_checker.cpp  type_checker.h
src/shell/: lean.cpp
src/util/: lean_path.cpp  lean_path.h  name.cpp  serializer.h
tests/lean/: acc.lean  acc_rec_bug.lean  cls_err.lean  elab_coercions1.lean  empty.lean  (+35 more)
tests/lean/perf/arithgen/: arithgen.cabal
tests/lean/perf/arithgen/app/: Main.hs
tests/lean/perf/arithgen/gencancel/: Main.hs
tests/lean/perf/arithgen/genfuse/: Main.hs
tests/lean/perf/arithgen/genrec/: Main.hs
tests/lean/perf/arithgen/src/: Gen.hs  Norm.hs  RenderLean.hs  RenderZ3.hs
(+142 files in other folders)
