name:                arithgen
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/arithgen#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Expr, Gen, Norm, RenderLean, RenderZ3
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , random
                     , MonadRandom
                     , mtl
                     , transformers
  default-language:    Haskell2010

executable genrec-exe
  hs-source-dirs:      genrec
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , arithgen
                     , MonadRandom
  default-language:    Haskell2010

executable genfuse-exe
  hs-source-dirs:      genfuse
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , arithgen
                     , MonadRandom
  default-language:    Haskell2010

executable gencancel-exe
  hs-source-dirs:      gencancel
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , arithgen
                     , MonadRandom
  default-language:    Haskell2010

test-suite arithgen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , arithgen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/arithgen
